<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rescue.week6sterlingsilver.DisplayReceiptActivity"
    tools:showIn="@layout/activity_display_receipt">

    <TextView
        android:id="@+id/txtReceiptLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/receipt_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="64sp"/>

    <TextView
        android:id="@+id/txtPurchaseDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_of_purchase_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReceiptLabel" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_placeholder"
        app:layout_constraintStart_toEndOf="@+id/txtPurchaseDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtReceiptLabel" />

    <TextView
        android:id="@+id/txtCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/customer_name_label"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPurchaseDateLabel" />

    <TextView
        android:id="@+id/txtCardType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/card_type_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerName" />

    <TextView
        android:id="@+id/txtCardLast4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/last_4_placeholder"
        app:layout_constraintStart_toEndOf="@+id/txtCardType"
        app:layout_constraintTop_toBottomOf="@+id/txtCustomerName" />

    <TextView
        android:id="@+id/txtQuantityPurchasedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/quantity_purchased_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCardType" />

    <TextView
        android:id="@+id/txtQuantityPurchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/zero_placeholder"
        app:layout_constraintStart_toEndOf="@+id/txtQuantityPurchasedLabel"
        app:layout_constraintTop_toTopOf="@+id/txtQuantityPurchasedLabel" />

    <TextView
        android:id="@+id/txtGrouponCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/groupon_savings_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuantityPurchasedLabel" />

    <TextView
        android:id="@+id/txtGrouponSavingsCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/savings_code_placeholder"
        app:layout_constraintStart_toEndOf="@+id/txtGrouponCodeLabel"
        app:layout_constraintTop_toTopOf="@+id/txtGrouponCodeLabel" />

    <TextView
        android:id="@+id/txtSubtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/subtotal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGrouponCodeLabel" />

    <TextView
        android:id="@+id/txtSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/zero_dollar_placeholder"
        app:layout_constraintStart_toEndOf="@+id/txtSubtotalLabel"
        app:layout_constraintTop_toTopOf="@+id/txtSubtotalLabel" />

    <TextView
        android:id="@+id/txtTaxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tax"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtotalLabel" />

    <TextView
        android:id="@+id/txtTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_dollar_placeholder"
        app:layout_constraintStart_toStartOf="@+id/txtSubtotal"
        app:layout_constraintTop_toTopOf="@+id/txtTaxLabel" />

    <TextView
        android:id="@+id/txtTotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/total"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTaxLabel" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_dollar_placeholder"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtTax"
        app:layout_constraintTop_toTopOf="@+id/txtTotalLabel" />

    <TextView
        android:id="@+id/txtThankYouLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/thank_you"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalLabel" />
</android.support.constraint.ConstraintLayout>
